Fix header text and alignment settings
increased text size and weight. Made header a flexbox and added align-items:center and 'padding: 0 16px' properties to it

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -10,6 +10,11 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  font-size: 30px;
+  font-weight: bold;
+  align-items: center;
+  padding: 0 16px;
 }
 
 .footer {
